--- a/MindSpore_Four/roberta_sequence_classification.ipynb
+++ b/MindSpore_Four/roberta_sequence_classification.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "16246520",
    "metadata": {},
    "outputs": [],
@@ -31,18 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "342109fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: HF_ENDPOINT=https://hf-mirror.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%env HF_ENDPOINT=https://hf-mirror.com"
    ]
@@ -59,23 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "402f0592",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache /tmp/jieba.cache\n",
-      "Loading model cost 1.277 seconds.\n",
-      "Prefix dict has been built successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import argparse\n",
     "import os\n",
@@ -100,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "51add1aa",
    "metadata": {},
    "outputs": [],
@@ -123,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5cc1cc97",
    "metadata": {},
    "outputs": [],
@@ -144,19 +123,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "edacf914",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/mindnlp/transformers/tokenization_utils_base.py:1526: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted, and will be then set to `False` by default. \n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load tokenizer\n",
     "if any(k in model_name_or_path for k in (\"gpt\", \"opt\", \"bloom\")):\n",
@@ -171,18 +141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9b113338",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'sentence1': Tensor(shape=[], dtype=String, value= 'Amrozi accused his brother , whom he called \" the witness \" , of deliberately distorting his evidence .'), 'sentence2': Tensor(shape=[], dtype=String, value= 'Referring to him as only \" the witness \" , Amrozi accused his brother of deliberately distorting his evidence .'), 'label': Tensor(shape=[], dtype=Int64, value= 1), 'idx': Tensor(shape=[], dtype=Int64, value= 0)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "datasets = load_dataset(\"glue\", task)\n",
     "print(next(datasets['train'].create_dict_iterator()))"
@@ -190,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3cf91bd3",
    "metadata": {},
    "outputs": [],
@@ -218,49 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6aec5a6b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n",
-      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n",
-      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'input_ids': Tensor(shape=[32, 70], dtype=Int64, value=\n",
-      "[[    0, 10127,  1001 ...     1,     1,     1],\n",
-      " [    0,   975, 26802 ...     1,     1,     1],\n",
-      " [    0,  1213,    56 ...     1,     1,     1],\n",
-      " ...\n",
-      " [    0,   133,  1154 ...     1,     1,     1],\n",
-      " [    0, 12667,  8423 ...     1,     1,     1],\n",
-      " [    0, 32478,  1033 ...     1,     1,     1]]), 'attention_mask': Tensor(shape=[32, 70], dtype=Int64, value=\n",
-      "[[1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " ...\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0]]), 'labels': Tensor(shape=[32], dtype=Int64, value= [1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, \n",
-      " 1, 1, 0, 0, 1, 1, 1, 0])}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(next(train_dataset.create_dict_iterator()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1353102f",
    "metadata": {
     "scrolled": true
@@ -289,33 +219,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "acf4aa92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MS_ALLOC_CONF]Runtime config:  enable_vmm:True  vmm_align_size:2MB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at AI-ModelScope/roberta-large and are newly initialized: ['classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "trainable params: 1,061,890 || all params: 356,423,684 || trainable%: 0.2979291353713745\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load model\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name_or_path, return_dict=True, mirror=\"modelscope\")\n",
@@ -342,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d887fc34",
    "metadata": {},
    "outputs": [],
@@ -367,41 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "89950bf4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(Tensor(shape=[1024, 1024], dtype=Float32, value=\n",
-       " [[ 9.42201912e-03,  3.68431699e-03, -3.65935750e-02 ...  4.10799198e-02, -6.41081808e-03,  8.61441996e-03],\n",
-       "  [ 1.17747569e-02,  9.00278613e-03,  1.73328817e-02 ...  2.88665313e-02, -2.76252581e-03, -5.72031247e-04],\n",
-       "  [-4.60726238e-04,  1.10795023e-02, -5.18864894e-04 ... -1.99680869e-02,  7.68191880e-03,  4.72938782e-03],\n",
-       "  ...\n",
-       "  [ 9.52273549e-04,  9.51045938e-03,  2.76891738e-02 ...  1.45859383e-02,  2.44282447e-02,  2.00108700e-02],\n",
-       "  [ 7.29785347e-03, -1.26254419e-02,  8.73612612e-03 ...  1.38808256e-02, -1.82791520e-02,  4.01444733e-02],\n",
-       "  [ 2.23141722e-03,  1.06983585e-02, -7.14888738e-04 ...  1.49706863e-02,  2.54806578e-02, -8.68784171e-03]]),\n",
-       " Tensor(shape=[1024], dtype=Float32, value= [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00 ...  0.00000000e+00,  0.00000000e+00,  0.00000000e+00]),\n",
-       " Tensor(shape=[2, 1024], dtype=Float32, value=\n",
-       " [[ 9.76719335e-03, -1.01758288e-02,  1.73892733e-03 ...  1.86475646e-02, -1.13016569e-04, -3.26926634e-02],\n",
-       "  [ 2.53574364e-03, -3.28583196e-02, -1.37895308e-02 ... -3.36077772e-02,  9.67593491e-03,  4.05835733e-02]]),\n",
-       " Tensor(shape=[2], dtype=Float32, value= [ 0.00000000e+00,  0.00000000e+00]),\n",
-       " Tensor(shape=[10, 1024], dtype=Float32, value=\n",
-       " [[-1.03466618e+00, -3.51051427e-03,  1.40675604e+00 ... -2.34139657e+00,  1.68957543e+00, -1.85463512e+00],\n",
-       "  [ 1.12078631e+00,  7.83631206e-01,  7.64074028e-01 ...  3.46080035e-01,  1.48165321e+00,  1.48423004e+00],\n",
-       "  [-1.27661026e+00, -5.82690835e-01, -1.64359331e-01 ...  8.61394227e-01, -3.36115092e-01, -6.75176322e-01],\n",
-       "  ...\n",
-       "  [-4.48245585e-01,  2.43864179e-01,  1.40321541e+00 ... -4.65794533e-01, -9.75367613e-03,  2.21390009e+00],\n",
-       "  [ 2.88565367e-01,  5.36100745e-01, -5.68864584e-01 ...  3.02486241e-01, -1.11184180e+00,  6.02162480e-01],\n",
-       "  [-9.24471259e-01,  9.41439047e-02,  1.81207046e-01 ... -9.48030651e-01,  1.46390045e+00,  1.75370836e+00]]))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print name of trainable parameters\n",
     "model.trainable_params()"
@@ -422,114 +298,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ddcc94a3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|          | 1/115 [00:02<03:57,  2.08s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [00:51<00:00,  2.24it/s]\n",
-      "  0%|          | 0/13 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 13/13 [00:03<00:00,  4.06it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 0: {'accuracy': 0.7058823529411765, 'f1': 0.8192771084337349}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [00:34<00:00,  3.36it/s]\n",
-      "100%|██████████| 13/13 [00:01<00:00,  7.01it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 1: {'accuracy': 0.7132352941176471, 'f1': 0.8202764976958526}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [00:33<00:00,  3.48it/s]\n",
-      "100%|██████████| 13/13 [00:01<00:00,  7.31it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 2: {'accuracy': 0.7156862745098039, 'f1': 0.8176100628930817}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [00:31<00:00,  3.60it/s]\n",
-      "100%|██████████| 13/13 [00:01<00:00,  7.11it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 3: {'accuracy': 0.7083333333333334, 'f1': 0.8205128205128206}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [00:34<00:00,  3.33it/s]\n",
-      "100%|██████████| 13/13 [00:01<00:00,  6.99it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 4: {'accuracy': 0.7132352941176471, 'f1': 0.8229954614220877}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define forward function\n",
     "def forward_fn(**batch):\n",
@@ -594,9 +366,9 @@
    "name": "mindspore1.7.0-cuda10.1-py3.7-ubuntu18.04"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "MindSpore",
    "language": "python",
-   "name": "python3"
+   "name": "mindspore"
   },
   "language_info": {
    "codemirror_mode": {
@@ -608,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.10"
   },
   "vscode": {
    "interpreter": {
