--- a/MindSpore_NLP/task2/roberta_sequence_classification.ipynb
+++ b/MindSpore_NLP/task2/roberta_sequence_classification.ipynb
@@ -2,49 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7228a58b-4f81-4f5d-ac6c-d9439b3f4447",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: HF_ENDPOINT=https://hf-mirror.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%env HF_ENDPOINT=https://hf-mirror.com"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9ff5004e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/numpy/core/getlimits.py:499: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
-      "  setattr(self, word, getattr(machar, word).flat[0])\n",
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float64'> type is zero.\n",
-      "  return self._float_to_str(self.smallest_subnormal)\n",
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/numpy/core/getlimits.py:499: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
-      "  setattr(self, word, getattr(machar, word).flat[0])\n",
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/numpy/core/getlimits.py:89: UserWarning: The value of the smallest subnormal for <class 'numpy.float32'> type is zero.\n",
-      "  return self._float_to_str(self.smallest_subnormal)\n",
-      "/home/ma-user/anaconda3/envs/MindSpore/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache /tmp/jieba.cache\n",
-      "Loading model cost 1.386 seconds.\n",
-      "Prefix dict has been built successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mindspore\n",
     "from tqdm import tqdm\n",
@@ -59,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e32c4a9e",
    "metadata": {},
    "outputs": [],
@@ -74,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "622fe9c8",
    "metadata": {},
    "outputs": [],
@@ -85,19 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "74e9efe0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ma-user/work/mindnlp/mindnlp/transformers/tokenization_utils_base.py:1526: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted, and will be then set to `False` by default. \n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if any(k in model_name_or_path for k in (\"gpt\", \"opt\", \"bloom\")):\n",
     "    padding_side = \"left\"\n",
@@ -111,18 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "41a63e71-e7c4-4e5d-9e22-6953d981d4b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'sentence1': Tensor(shape=[], dtype=String, value= 'Amrozi accused his brother , whom he called \" the witness \" , of deliberately distorting his evidence .'), 'sentence2': Tensor(shape=[], dtype=String, value= 'Referring to him as only \" the witness \" , Amrozi accused his brother of deliberately distorting his evidence .'), 'label': Tensor(shape=[], dtype=Int64, value= 1), 'idx': Tensor(shape=[], dtype=Int64, value= 0)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "datasets = load_dataset(\"glue\", task)\n",
     "print(next(datasets['train'].create_dict_iterator()))"
@@ -130,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bd2d7cd5-62b8-4b7a-ac69-338e6319152e",
    "metadata": {},
    "outputs": [],
@@ -158,40 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3b1fd5fc-2285-409e-a4e5-cc3c9759d77a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'input_ids': Tensor(shape=[32, 70], dtype=Int64, value=\n",
-      "[[    0, 10127,  1001 ...     1,     1,     1],\n",
-      " [    0,   975, 26802 ...     1,     1,     1],\n",
-      " [    0,  1213,    56 ...     1,     1,     1],\n",
-      " ...\n",
-      " [    0,   133,  1154 ...     1,     1,     1],\n",
-      " [    0, 12667,  8423 ...     1,     1,     1],\n",
-      " [    0, 32478,  1033 ...     1,     1,     1]]), 'attention_mask': Tensor(shape=[32, 70], dtype=Int64, value=\n",
-      "[[1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " ...\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0],\n",
-      " [1, 1, 1 ... 0, 0, 0]]), 'labels': Tensor(shape=[32], dtype=Int64, value= [1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, \n",
-      " 1, 1, 0, 0, 1, 1, 1, 0])}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(next(train_dataset.create_dict_iterator()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "efb606a2-1fb5-415c-bf12-7e6fd324fe0a",
    "metadata": {
     "scrolled": true
@@ -203,26 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a3c15af0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at roberta-large and are newly initialized: ['classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "trainable params: 1,223,682 || all params: 356,585,476 || trainable%: 0.34316652874555104\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = AutoModelForSequenceClassification.from_pretrained(model_name_or_path, return_dict=True)\n",
     "model = peft.get_peft_model(model, peft_config)\n",
@@ -231,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6d3c5edb",
    "metadata": {},
    "outputs": [],
@@ -248,346 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4d279225",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/115 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [02:12<00:00,  1.15s/it]\n",
-      " 15%|█▌        | 2/13 [00:00<00:04,  2.60it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 13/13 [00:02<00:00,  5.82it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 0: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:09<00:00,  1.65it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  6.18it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 1: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:19<00:00,  1.45it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.80it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 2: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:14<00:00,  1.55it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  4.95it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 3: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:10<00:00,  1.64it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.72it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 4: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:14<00:00,  1.55it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.77it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 5: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:15<00:00,  1.52it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.52it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 6: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:12<00:00,  1.59it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  6.29it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 7: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:07<00:00,  1.70it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  6.04it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 8: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:15<00:00,  1.53it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.84it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 9: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:10<00:00,  1.63it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.76it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 10: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:11<00:00,  1.60it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  6.13it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 11: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:11<00:00,  1.60it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  6.03it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 12: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:12<00:00,  1.59it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  6.12it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 13: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:17<00:00,  1.47it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.97it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 14: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:14<00:00,  1.55it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.76it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 15: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:12<00:00,  1.59it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.83it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 16: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:09<00:00,  1.66it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.98it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 17: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:18<00:00,  1.46it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  6.01it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 18: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 115/115 [01:21<00:00,  1.41it/s]\n",
-      "100%|██████████| 13/13 [00:02<00:00,  5.86it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch 19: {'accuracy': 0.6838235294117647, 'f1': 0.8122270742358079}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mindnlp.core import value_and_grad\n",
     "def forward_fn(**batch):\n",
@@ -624,9 +203,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MindSpore",
+   "display_name": "python-3.7.10",
    "language": "python",
-   "name": "mindspore"
+   "name": "python-3.7.10"
   },
   "language_info": {
    "codemirror_mode": {
@@ -638,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.7.10"
   },
   "vscode": {
    "interpreter": {
